# aws-mcp-server

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  codecov.yml  progress.md  pyproject.toml  security_config_example.yaml  smithery.yaml  spec.md
.github/workflows/: ci.yml  dev.yml  release.yml
deploy/docker/: Dockerfile  docker-compose.yml
docs/: VERSION.md
scripts/: build-multiarch.sh
src/aws_mcp_server/: __init__.py  __main__.py  _version.py  api.py  cli_executor.py  config.py  prompts.py  resources.py  security.py  server.py  tools.py
src/aws_mcp_server/tools/: __init__.py
src/aws_mcp_server/utils/: __init__.py  cli_executor.py  formatter.py
tests/: conftest.py  test_aws_integration.py  test_aws_setup.py  test_bucket_creation.py  test_run_integration.py
tests/integration/: test_aws_live.py  test_formatter_integration.py  test_security_integration.py  test_server_integration.py
tests/unit/: test_cli_executor.py  test_formatter.py  test_init.py  test_main.py  test_prompts.py  test_resources.py  test_security.py  test_server.py  test_tools.py
